Fix menu bar not placed properly on Firefox
Because Firefox *still* doesn't support :has

--- a/src/app.css
+++ b/src/app.css
@@ -1062,7 +1062,7 @@ body:has(.status-deck) .media-post-link {
   filter: drop-shadow(0 1px 2px var(--button-bg-color));
 }
 @media (max-width: calc(40em - 1px)) {
-  #app:has(#shortcuts .tab-bar) #compose-button {
+  #app[data-shortcuts-view-mode='tab-menu-bar'] #compose-button {
     bottom: calc(16px + 52px);
     bottom: calc(16px + env(safe-area-inset-bottom) + 52px);
   }
